# cb-skill-server

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  api.py  auth.py  config.py  main.py  mcp_server.py  models.py  registry.py  runner.py
docs/plans/: 2026-07-13-skills-server-design.md
input/: 登录注册.docx
nginx/: nginx.conf
nginx/certs/: README.md
output/: 登录注册_总用例集.yaml  登录注册_接口用例.yaml  登录注册_页面交互用例.yaml
skills/: README.md
skills/api-auto-case-generate/: SKILL.md
skills/big-data-generator/: SKILL.md
skills/boundary-equivalence-split/: SKILL.md
skills/bug-rca-analyze/: SKILL.md
skills/business-test-case/: SKILL.md
skills/code-review-checklist/: SKILL.md
skills/db-test-sql-generate/: SKILL.md
skills/jmeter-locust-stress-gen/: SKILL.md
skills/json-validator/: SKILL.md
skills/master-agent/: SKILL.md
skills/mitm-track-auto-test/: SKILL.md
skills/performance-bottleneck-analyze/: SKILL.md
skills/python-test-toolkit/: SKILL.md
skills/requirement-risk-scan/: SKILL.md
skills/security-basic-test/: SKILL.md
skills/shell-test-ops/: SKILL.md
skills/test-plan-auto-generate/: SKILL.md
skills/test-report-auto/: SKILL.md
skills/testing-orchestrator/: SKILL.md
template/: abnormal_miner_demand.md  balanced_sampler_demand.md  baseline_snapshot_demand.md  db_sql_demand.md  performance_analyze_demand.md  risk_sample_builder_demand.md  sample_label_demand.md  security_test_demand.md  shell_script_demand.md  stress_script_demand.md  需求测试过程记录模板.md
tests/: conftest.py  test_api.py
(+8 files in other folders)
