[project]
name = "cb-skill-server"
version = "0.1.0"
description = "Self-hosted skills registry + MCP server for team use (Cursor / CodeBuddy)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-frontmatter>=1.1.0",
    "PyYAML>=6.0.0",
    "mcp>=1.4.0",
    "docker>=7.1.0",
    "jsonschema>=4.23.0",
    "starlette>=0.40.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "httpx>=0.27.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
